# Thesis

./: .env.example  README.md  baseline.py  dq_notes.json  dq_rules.json  experiment.py  experimental_plan.md  inspect_experiments.ipynb  main.py  note_functions.json  pyproject.toml  rules.txt  test_explainer.py
.streamlit/: config.toml
Thesis.git/: config  packed-refs
Thesis.git/objects/pack/: pack-221a1f87957fcf2b486752e9671a6174f4756acf.idx  pack-221a1f87957fcf2b486752e9671a6174f4756acf.pack  pack-221a1f87957fcf2b486752e9671a6174f4756acf.rev
artifacts/: dq_notes.json  dq_rules.json  note_functions.json
data/health/dirty/: health.xlsx  health_dq_mask.xlsx
data/health/raw/: Encounter_Visits.xlsx  Patients.xlsx  Structured_Lab_Results.xlsx
data/retail/dirty/: retail.xlsx  retail_dq_mask.xlsx
data/sensor/dirty/: sensor.xlsx  sensor_dq_mask.xlsx
data/wallmart/dirty/: wallmart.xlsx  wallmart_dq_mask.xlsx
domain_knowledge/: energy.txt  health.txt  retail.txt  wallmart.txt
domain_knowledge/defined/: energy.txt  health.txt  mqtt.txt  retail.txt  sensor.txt  wallmart.txt
domain_knowledge/llm/: energy.txt  health.txt  retail.txt  sensor.txt  wallmart.txt
src/data_quality_tool/data/: db.py  (+2 more)
src/quality_assesment/: checker.py  rule_engine.py  rules_parser.py
src/quality_assessment/: checker.py  dataset_selection.py  db.py  llm_client.py  note_engine.py  note_evaluator.py  note_inspector.py  note_pipeline.py  prompt_builder.py  rci_agent.py  rule_engine.py  rule_inspector.py  rules_parser.py
src/thesis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
streamlit_app/: app.py
streamlit_app/components/: dq_card.py  tabs.py
streamlit_app/utils/: dataset_helper.py  load_summary.py  rule_note_explainer.py  session_state_helper.py  similarity.py
(+366 files in other folders)
