[project]
name = "thesis"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = ["Ruud Korsten <ruud.korsten@blenddata.nl>"]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]