[project]
name = "thesis"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Ruud Korsten", email = "ruud.korsten@blenddata.nl" }
]
dependencies = [
    "pandas",
    "psycopg2-binary",
    "python-dotenv"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]