[project]
name = "thesis"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Ruud Korsten", email = "ruud.korsten@blenddata.nl" }
]
dependencies = [
    "pandas",
    "psycopg2-binary",
    "python-dotenv",
    "polars",  # Add Polars for high-performance data processing
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------
# Ruff Configuration
# ---------------------------
[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "UP", "PL"]
ignore = ["E501"]
fix = true
show-fixes = true

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 88

# Optional: if you also want to use pytest & black
[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"

[tool.black]
line-length = 88
target-version = ['py311']
